--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,6 @@
 .about {
-
+    padding-top: 50px;
+    margin-top: -50px;
 }
 
 .about .about-content {
@@ -26,7 +27,7 @@
     width: 250px;
     height: 250px;
     position: relative;
-    z-index: 1000;
+    z-index: 5;
 }
 
 .about .image img {
