--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -8,8 +8,14 @@
     left: 0;
     right: 0;
     background-color: rgba(10, 25, 47, .8);
-    z-index: 2;
+    z-index: 1000;
     height: var(--nav-height);
+    opacity: 0;
+    transition: all .3s ease;
+}
+
+.navbar.visible {
+    opacity: 1;
 }
 
 .navbar .logo:hover {
