--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+@import "./commons.css";
 @import "./nav.css";
 @import "./landing.css";
 @import "./socials.css";
@@ -11,6 +12,7 @@
     --bg: #0a192f;
     --bg-secondary: #112240;
     --text-green: #98E2C6;
+    --inline-link: #98E2C6;
     --text-titles: #ccd6f6;
     --text-content: #626d89;
     --text-content-secondary: #a8b2d1;
