--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: var(--nav-height);
+    padding-top: var(--nav-height);
+    background-color: var(--bg);
 }
 
 .landing .salutations {
@@ -35,26 +36,3 @@
     margin-bottom: var(--nav-height);
 }
 
-.presentation a {
-    text-decoration: none;
-    color: var(--text-green);
-    transition: all .3s ease;
-    display: inline-block;
-}
-
-.presentation a:hover {
-    filter: brightness(1.3);
-}
-
-.presentation a::after {
-    content: '';
-    width: 0;
-    height: 1px;
-    display: block;
-    background-color: var(--text-green);
-    transition: 300ms;
-}
-
-.presentation a:hover::after {
-    width: 100%;
-}
